# adder

./: Cargo.toml  docker-compose.yaml  rustfmt.toml
adder/: Cargo.toml
adder-core/: Cargo.toml
adder-core/src/: lib.rs
adder-core/src/model/: webCraw.rs
adder-utils/: Cargo.toml
adder-utils/src/: lib.rs
adder/src/: lib.rs  main.rs
adder/tests/: integration_test.rs  integuration_test.rs
user_auth_service/: .env  Cargo.toml
user_auth_service/migrations/: 0001_create_users_table.sql
user_auth_service/src/: handlers.rs  main.rs  models.rs  responses.rs
user_auth_service/src/auth/: errors.rs  jwt.rs
user_auth_service/tests/: auth_integration_tests.rs
